Fix big-mac spacing issue

--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -1,6 +1,9 @@
 $medium: new-breakpoint(max-width 900px 6);
 $circle_size: 60px;
 $green-icon: #4f612a;
+// * {
+//   border: 1px dashed red;
+// }
 
 body {
   background-color: white;
@@ -201,7 +204,6 @@ button {
     }
     figure {
       text-align: center;
-      margin-top: 15px;
     }
     span {
       // @include span-columns(3 of 3);
@@ -215,8 +217,6 @@ button {
       font-size: 1.1em;
       // margin: 0 0.2em;
       border: 5px solid blue;
-      padding: 10px;
-
     }
     #average_rate {
       // @include span-columns(3 of 3);
@@ -231,6 +231,9 @@ button {
     }
     .big-mac-span {
       border: rgb(79,98,40) 5px solid;
+      width: $circle_size*1.3;
+      height: $circle_size*1.3;
+      line-height: $circle_size*1.3;
     }
     .flight-span {
       border: rgb(96,74,122) 5px solid;
@@ -251,7 +254,6 @@ button {
     color: black;
     font-size: 20px;
     display: inline;
-    vertical-align: center;
     text-align: right;
     .logout {
       padding: 5px;
@@ -272,7 +274,6 @@ button {
     width: 100%;
     text-align: left;
     color: white;
-    vertical-align: center;
   }
   .user-action {
     padding: 5px;
